[workspace]
members = ["ra2_asset", "ra2_util", "ra2_data", "ra2_render", "ra2_bin", "ra2_plugins"]
resolver = "2" # Important! wgpu/Bevy needs this!


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

