[package]
name = "ra2_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra2_asset = { path = "../ra2_asset"}
ra2_data = { path = "../ra2_data"}

anyhow = "1.0.71"
bevy = { git = "https://github.com/bevyengine/bevy.git" , features = ["dynamic_linking"] }
