[package]
name = "ra2_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
serde = "1.0.162"
serde_json = "1.0.96"
base64 = "0.21.0"
regex = "1.8.1"
png = "0.17.8"
ra2_util = { path = "../ra2_util"}
num_enum = "0.6.1"
anyhow = "1.0.71"