[package]
name = "ra2_plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" , features = ["dynamic_linking"] }
anyhow = "1.0.71"
ra2_data = { path = "../ra2_data"}
ra2_util = { path = "../ra2_util"}
ra2_asset = { path = "../ra2_asset"}