[package]
name = "ra2_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy = { git = "https://github.com/bevyengine/bevy.git" , features = ["dynamic_linking"] }
# bevy_asset = "0.11"
serde = "1.0.162"
serde_json = "1.0.96"
rand = "0.8.5"
regex = "1.8.1"
png = "0.17.8"
anyhow = "1.0.71"
#
#[dependencies.gltf]
#version = "0.15.2"
#features = ["utils", "names", "KHR_materials_unlit"]
#default-features = false