[package]
name = "ra2_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.162"
serde_json = "1.0.96"
rand = "0.8.5"
regex = "1.8.1"
png = "0.17.8"
anyhow.workspace = true
bevy.workspace = true
#
#[dependencies.gltf]
#version = "0.15.2"
#features = ["utils", "names", "KHR_materials_unlit"]
#default-features = false